--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "axios": "^0.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "customize-cra": "^0.8.0",
+    "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
     "react": "^16.11.0",
+    "react-app-rewired": "^2.1.4",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "build-with-zip": "react-app-rewired build && cd build && zip -r ../build.zip ./*"
   },
   "eslintConfig": {
     "extends": "react-app"
